@@ -4,6 +4,10 @@ CHANGE LOG
 
 Changes up to 0.96
 
+   * fixed problem with rendering of discontinuous surfaces
+
+   -- beta13
+   
    * get_angle, get_distance commands
  
    * fixed pasting to OpenGL window under X11
